Fixed: IE8 vertical-align in thread_list.php

--- a/forum/styles/violet/style.css
+++ b/forum/styles/violet/style.css
@@ -14,7 +14,7 @@ form {
 }
 
 img {
-    vertical-align: text-top;
+    vertical-align: middle;
 }
 
 frameset {
